pagina web version 2

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 Mi primera Pagina Web
-<marquee behavior="
-<h1> Mi Primera Pagina Web<h1> 
+<marquee>
+<h1> Mi Primera Pagina Web<h1><marquee> 
 
-" direction="100"></marquee>
-<h1> Mi Primera Pagina Web<h1> 
-	
+
+
+
 		<img src="foto.jpg">
 
